--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "http-status": "^1.7.4",
     "joi": "^17.12.2",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3"
   }
 }
